--- a/src/Proxet.Tournament.Tests/Proxet.Tournament.Tests.csproj
+++ b/src/Proxet.Tournament.Tests/Proxet.Tournament.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>net5.0</TargetFramework>
@@ -6,6 +6,10 @@
         <RootNamespace>Proxet.Turnament.Tests</RootNamespace>
         <OutputType>Library</OutputType>
     </PropertyGroup>
+
+    <ItemGroup>
+      <None Include="..\..\.editorconfig" Link=".editorconfig" />
+    </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\Proxet.Tournament\Proxet.Tournament.csproj" />
